Issue #SC-2172 feat: upgrade to jdk11