@@ -14,9 +14,9 @@
 	<version>1.0-SNAPSHOT</version>
 	<name>actor-core</name>
 	<properties>
-		<version.compiler.plugin>2.3.1</version.compiler.plugin>
-		<maven.compiler.target>1.8</maven.compiler.target>
-		<maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.release>11</maven.compiler.release>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<scoverage.plugin.version>1.1.1</scoverage.plugin.version>
@@ -81,17 +81,17 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-				</configuration>
+                <version>3.8.0</version>
+                <configuration>
+                  <release>11</release>
+                </configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.20</version>
+				<version>2.22.0</version>
 				<configuration>
+                    <argLine>--illegal-access=permit</argLine>
 					<argLine>@{argLine} -Xmx1024m -XX:MaxPermSize=256m</argLine>
 					<includes>
 						<include>**/*Spec.java</include>
